--- a/tasks/assets.yml
+++ b/tasks/assets.yml
@@ -18,8 +18,10 @@
   with_items:
       - moodle3_dump.sh
       - moodle3_importdb.sh
+      - moodle3_migrate.sh
       - moodle3_restore.sh
       - moodle3_snapshot.sh
+      - moodle3_upgrade.sh
 
 - name: Ensure /opt/usao/moodle3/etc exists
   file:
