--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -20,10 +20,18 @@
     owner: root
     group: root
 
-- name: Template php.ini
+- name: Template php.ini for SCL PHP
   template:
     src: php.ini.j2
     dest: /etc/opt/rh/rh-php56/php.ini
+    mode: 0644
+    owner: root
+    group: wheel
+
+- name: Configure OpCache for SCL PHP
+  template:
+    src: 10-opcache.ini.j2
+    dest: /etc/opt/rh/rh-php56/php.d/10-opcache.ini
     mode: 0644
     owner: root
     group: wheel
