--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -39,6 +39,7 @@ moodle3_session_gc_maxlifetime: "1440"
 moodle3_opcache_enable: "1"
 moodle3_opcache_enable_cli: "0"
 moodle3_opcache_max_accelerated_files: "8000"
+moodle3_opcache_memory_consumption: "128"
 moodle3_opcache_revalidate_freq: "60"
 moodle3_opcache_revalidate_path: "0"
 
