--- a/tasks/yum.yml
+++ b/tasks/yum.yml
@@ -17,28 +17,28 @@
   - mod_php
   - MySQL-python
   - patch
-  - rh-php56
-  - rh-php56-php-fpm
-  - rh-php56-php-opcache
-  - rh-php56-php-iconv
-  - rh-php56-php-mbstring
-  - rh-php56-php-curl
-  - rh-php56-php-openssl
-  - rh-php56-php-tokenizer
-  - rh-php56-php-xmlrpc
-  - rh-php56-php-soap
-  - rh-php56-php-ctype
-  - rh-php56-php-zip
-  - rh-php56-php-gd
-  - rh-php56-php-simplexml
-  - rh-php56-php-spl
-  - rh-php56-php-pcre
-  - rh-php56-php-dom
-  - rh-php56-php-xml
-  - rh-php56-php-intl
-  - rh-php56-php-json
-  - rh-php56-php-ldap
-  - rh-php56-php-mysql
+  - rh-php71-php
+  - rh-php71-php-fpm
+  - rh-php71-php-opcache
+  - rh-php71-php-iconv
+  - rh-php71-php-mbstring
+  - rh-php71-php-curl
+  - rh-php71-php-openssl
+  - rh-php71-php-tokenizer
+  - rh-php71-php-xmlrpc
+  - rh-php71-php-soap
+  - rh-php71-php-ctype
+  - rh-php71-php-zip
+  - rh-php71-php-gd
+  - rh-php71-php-simplexml
+  - rh-php71-php-spl
+  - rh-php71-php-pcre
+  - rh-php71-php-dom
+  - rh-php71-php-xml
+  - rh-php71-php-intl
+  - rh-php71-php-json
+  - rh-php71-php-ldap
+  - rh-php71-php-mysql
   - python-pip
 
 - name: Remove potentially conflicting yum packages
